ags (2.0.27)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed ags_ladspa_browser_callbacks.c to obtain GtkComboBox model
	* added ags_buffer_util_test.c
	* added ags_ladspa_conversion_test.c

ags (2.0.26)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* added ags_conversion_test.c
	* added ags_wave_test.c
	* added ags_buffer_test.c

ags (2.0.25)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* added shortcuts to fluid soundfonts and hydrogen drumkits
	* improved default size of AgsConnectionEditor
	* improved all labels upper-case of AgsNotationToolbar, AgsAutomationToolbar and AgsWaveToolbar
	* fixed check child == NULL in ags_output_listing_editor.c and ags_input_listing_editor.c
	* fixed missing include in gsequencer_main.c

ags (2.0.24)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed compiler errors

ags (2.0.23)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* disabled gtk fatal mask
	* improved AgsRampAccelerationDialog to use proper step count

ags (2.0.22)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed missing includes
	* fixed missing thread-safe properties of AgsTask

ags (2.0.21)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* added missing chapter
	* added missing image wave toolbar of user's handbook
	* minor improvements

ags (2.0.20)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* updated the docs user's and developer's handbook
	* added new AgsSpectrometer, AgsEqualizer10 and AgsAudiorec machines to the user's handbook
	* replaced most of the screenshot for the user's handbook
	* fixed missing gtkrc entry of AgsSelectBufferDialog and AgsPositionWaveCursorDialog
	* fixed ags_pattern_envelope_set_preset_property()
	* fixed AgsRampAccelerationDialog

ags (2.0.19)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed notation editor missing segments as zoom bigger than 1:1