@@ -30,6 +30,7 @@ check_PROGRAMS += \
 	ags_dssi_plugin_test \
 	ags_ladspa_conversion_test \
 	ags_ladspa_manager_test \
+	ags_lv2_conversion_test \
 	ags_lv2_manager_test \
 	ags_lv2_option_manager_test \
 	ags_lv2_plugin_test \
@@ -247,6 +248,12 @@ ags_ladspa_manager_test_SOURCES = ags/test/plugin/ags_ladspa_manager_test.c
 ags_ladspa_manager_test_CFLAGS = $(CFLAGS) $(LIBAO_CFLAGS) $(LIBASOUND2_CFLAGS) $(LIBXML2_CFLAGS) $(SNDFILE_CFLAGS) $(LIBINSTPATCH_CFLAGS) $(GOBJECT_CFLAGS) $(JACK_CFLAGS)
 ags_ladspa_manager_test_LDFLAGS = $(LDFLAGS) -pthread
 ags_ladspa_manager_test_LDADD = libags_audio.la libags_server.la libags_thread.la libags.la libags_thread.la -lcunit -lrt -lm $(LIBAO_LIBS) $(LIBASOUND2_LIBS) $(LIBXML2_LIBS) $(SNDFILE_LIBS) $(LIBINSTPATCH_LIBS) $(GOBJECT_LIBS) $(JACK_LIBS)
+
+# lv2 conversion unit test
+ags_lv2_conversion_test_SOURCES = ags/test/plugin/ags_lv2_conversion_test.c
+ags_lv2_conversion_test_CFLAGS = $(CFLAGS) $(LIBAO_CFLAGS) $(LIBASOUND2_CFLAGS) $(LIBXML2_CFLAGS) $(SNDFILE_CFLAGS) $(LIBINSTPATCH_CFLAGS) $(GOBJECT_CFLAGS) $(JACK_CFLAGS)
+ags_lv2_conversion_test_LDFLAGS = $(LDFLAGS) -pthread
+ags_lv2_conversion_test_LDADD = libags_audio.la libags_server.la libags_thread.la libags.la libags_thread.la -lcunit -lrt -lm $(LIBAO_LIBS) $(LIBASOUND2_LIBS) $(LIBXML2_LIBS) $(SNDFILE_LIBS) $(LIBINSTPATCH_LIBS) $(GOBJECT_LIBS) $(JACK_LIBS)
 
 # lv2 manager unit test
 ags_lv2_manager_test_SOURCES = ags/test/plugin/ags_lv2_manager_test.c
